# vs2022toCmakeConverter

./: .gitmodules  CMakeLists.txt  README.md
cmake/: ProjectModule.cmake
src/: CMakeLists.txt
src/converter/: StringUtils.hpp  VcxprojConverter.cpp  VcxprojConverter.h  VcxprojParser.cpp  VcxprojParser.h
