cmake_minimum_required(VERSION 3.16)
project(vs2022ToCmakeConverter)

set(CMAKE_BUILD_TYPE Release)

set(CMAKE_CONFIGURATION_TYPES "${CMAKE_BUILD_TYPE}")
string(TOLOWER ${CMAKE_BUILD_TYPE} BUILD_TYPE)

math(EXPR ARCH "8*${CMAKE_SIZEOF_VOID_P}")
math(EXPR SUBSYSTEM "${CMAKE_SIZEOF_VOID_P}/4")

set(LIBDIR ${CMAKE_BINARY_DIR}/../lib/${ARCH})
set(EXEDIR ${CMAKE_BINARY_DIR}/../bin/${ARCH})
if(NOT ${CMAKE_GENERATOR} MATCHES "^Visual Studio")
    set(EXEDIR ${EXEDIR}/${CMAKE_BUILD_TYPE})
    set(LIBDIR ${LIBDIR}/${CMAKE_BUILD_TYPE})
endif()

link_directories("${LIBDIR}")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${LIBDIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${LIBDIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${EXEDIR})
set(CMAKE_PDB_OUTPUT_DIRECTORY ${EXEDIR})

set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}")

include(cmake/ProjectModule.cmake)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(APP_NAME ${PROJECT_NAME})

add_subdirectory(third_party)

add_subdirectory(src)